# ecs-kube

./: BUILD.bazel  Makefile  README.md  standard_sc.yml
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
config/: apiserver.yaml
config/certificates/: apiserver.crt  apiserver.csr  apiserver.key  apiserver_ca.crt  apiserver_ca.key  apiserver_ca.srl
docs/examples/ecsdeployment/: ecsdeployment.yaml
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/ecskube/: doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/ecskube/install/: zz_generated.api.register.go
pkg/apis/ecskube/v1alpha1/: doc.go  ecsdeployment_types.go  ecsdeployment_types_test.go  v1alpha1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/client/clientset_generated/clientset/: clientset.go  doc.go
pkg/client/clientset_generated/clientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/internalclientset/: clientset.go  doc.go
pkg/client/informers_generated/externalversions/: factory.go  generic.go
pkg/client/informers_generated/internalversion/: factory.go  generic.go
pkg/controller/: zz_generated.api.register.go
pkg/controller/ecsdeployment/: controller.go  controller_test.go  ecsdeployment_suite_test.go  zz_generated.api.register.go
pkg/controller/sharedinformers/: informers.go  zz_generated.api.register.go
pkg/openapi/: openapi_generated.go
sample/: ecsdeployment.json  ecsdeployment.yaml
(+27 files in other folders)
